--- a/index.html
+++ b/index.html
@@ -89,12 +89,17 @@
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style3">
-								<a href="https://github.com/Nishadtaj" class="image featured"><img src="images/logo_github.png" alt="" /></a>
-								<h3><a href="https://github.com/Nishadtaj">Github</a></h3>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://github.com/JapneetSachdeva1" class="image featured"><img src="images/logo_github.png" alt="" /></a>
+								<h3><a href="https://github.com/JapneetSachdeva1">Github</a></h3>
 								<p>My open source contributions for community.</p>
 							</article>
-						</div>					
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+						</div>			
 					</div>
 				</div>
 			</article>
