--- a/index.html
+++ b/index.html
@@ -85,18 +85,16 @@
 				<div class="container">
 					<header>
 						<h2>My latest work and contributions</h2>
-			
+					
 					</header>
 					<div class="row">
-						<div class="row aln-center"></div>
-							<div class="col-4 col-6-medium col-12-small">
-								<article class="box style2">
-									<a href="https://github.com/JapneetSachdeva1" class="image featured"><img src="images/logo_github.png" alt="" /></a>
-									<h3><a href="https://github.com/JapneetSachdeva1">Github</a></h3>
-									<p>My open source contributions for community.</p>
-								</article>
-							</div>
-					    </div>			
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://github.com/Nishadtaj" class="image featured"><img src="images/logo_github.png" alt="" /></a>
+								<h3><a href="https://github.com/Nishadtaj">Github</a></h3>
+								<p>My open source contributions for community.</p>
+							</article>
+						</div>					
 					</div>
 				</div>
 			</article>
