--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
 								<h3>Agile Principles</h3>
-								<p>Agile Scrum methodology understanding. Agile management by attending daily standup calls, sprint retrospective, sprint review meetings and backlog refinement. Acceptance Criteria and Bugs tracking.</p>
+								<p>Agile Scrum and Kanban understanding. Agile management with handling daily standup calls, retrospectives, review meetings. 
+									Managed teams of 2 different projects with 4 members each. Acceptance Criteria and Bugs tracking.
+								</p>
 							</section>
 						</div>
 					</div>
