--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Nishad Taj</strong>.</h1>
 							</header>
-							<p>Test Automation Engineer | 4 years of experience
-								| Experienced in Agile team | Contact - nishadtaj84@gmail.com
-								
+							<p>Test Automation Engineer | 4 years of experience | Experienced in Agile team | Contact - nishadtaj84@gmail.com								
 							</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
