--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
 								<h3>Agile Principles</h3>
-								<p>Agile Scrum understanding. Agile management with handling daily standup calls, retrospectives, review meetings. 
-								Acceptance Criteria and Bugs tracking.
+								<p>Functional automation using Selenium with Java, API Test Automation using Rest Assured. 
+									Worked on Appium with Javascript.
 								</p>
 							</section>
 						</div>
