--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
 								<h3>QA</h3>
-								<p>Functional testing, Non Functional testing like API, Test Planning, Bug reporting and tracking, Defect RCA, Testings like regression, smoke, sanity.</p>
+								<p>Functional testing, Non Functional testing like API, Test Planning, Bug reporting and tracking, Defect RCA, Testings like regression, smoke, sanity.
+									
+								</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -60,6 +62,7 @@
 								<h3>QA Automation</h3>
 								<p>Functional automation using Selenium with Java, API Test Automation using Rest Assured. 
 									Worked on Appium with Javascript.
+
 								</p>
 							</section>
 						</div>
@@ -67,8 +70,8 @@
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
 								<h3>Agile Principles</h3>
-								<p>Functional automation using Selenium with Java, API Test Automation using Rest Assured. 
-									Worked on Appium with Javascript.
+								<p>Agile Scrum understanding. Engaged in daily standup calls, review meetings, retrospectives,
+									sprint planning and backlog refinement.
 								</p>
 							</section>
 						</div>
