--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 							<header>
 								<h1>Hi. I'm <strong>Nishad Taj</strong>.</h1>
 							</header>
-							<p>Test Automation Engineer | 4 years of experience
-								| Experienced in Agile team | Contact - nishadtaj84@gmail.com
+							<p>Test Automation Engineer | 4 years of experience | 
+								Expertise in Agile team | Contact - nishadtaj84@gmail.com
 								
 							</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
@@ -44,15 +44,17 @@
 				<div class="container">
 					<header>
 						<h2>Here's all the stuff I do.</h2>
-						<p>QA-QA Automation-Performance Testing</p>
+						<p>QA - QA Automation - Performance Testing</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
 								<h3>QA</h3>
-								<p>Functional testing, Non Functional testing like API, Test Planning, Bug reporting and tracking, Defect RCA, Testings like regression, smoke, sanity.
-									
+								<p>Functional testing involving regression, smoke, sanity and integration testing. 
+									Non Functional testing like API using Postman, Test Planning, Bug reporting and tracking, Defect RCA.
+
+
 								</p>
 							</section>
 						</div>
@@ -63,6 +65,7 @@
 								<p>Functional automation using Selenium with Java, API Test Automation using Rest Assured. 
 									Worked on Appium with Javascript.
 
+
 								</p>
 							</section>
 						</div>
@@ -71,7 +74,8 @@
 								<span class="icon featured fa-thumbs-up"></span>
 								<h3>Agile Principles</h3>
 								<p>Agile Scrum understanding. Engaged in daily standup calls, review meetings, retrospectives,
-									sprint planning and backlog refinement.
+									sprint planning and backlog refinement. 
+									 Acceptance Criteria and Bugs tracking
 								</p>
 							</section>
 						</div>
