--- a/index.html
+++ b/index.html
@@ -62,10 +62,8 @@
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>QA Automation</h3>
-								<p>Functional automation using Selenium with Java, API Test Automation using Rest Assured. 
-									Worked on Appium with Javascript.
+								<p>Functional automation using Selenium with Java, API Test Automation using Rest Assured. Worked on Appium with Javascript.
 									
-
 
 								</p>
 							</section>
