--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<span class="icon featured fa-comments"></span>
 								<h3>QA</h3>
 								<p>Functional testing involving regression, smoke, sanity and integration testing. 
-									Non Functional testing like API using Postman, Test Planning, Bug reporting and tracking, Defect RCA.
+									Non Functional testing like API using Postman, Test Planning, Bug reporting, Defect RCA.
 
 
 								</p>
@@ -63,7 +63,7 @@
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>QA Automation</h3>
 								<p>Functional automation using Selenium with Java, API automation using Rest Assured. Hybrid framework using 
-									Java for web apps. Worked on Appium with Javascript. 
+									 Java for web apps. Worked on Appium with Javascript. 
 
 									 
 								</p>
