--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>QA Automation</h3>
-								<p>Functional automation using Selenium with Java, API automation using Rest Assured. Hybrid framework using Java
+								<p>Functional automation using Selenium with Java, API automation using Rest Assured. Hybrid framework using  Java
 									for web apps. Worked on Appium with Javascript. 
 
 									 
@@ -94,7 +94,7 @@
 						<h2>My latest work and contributions</h2>
 					
 					</header>
-					<div class="row">
+					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://github.com/Nishadtaj" class="image featured"><img src="images/logo_github.png" alt="" /></a>
