--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>QA Automation</h3>
 								<p>Functional automation using Selenium with Java, API automation using Rest Assured. 
-									Hybrid framework using  Java for web apps. 
-									 for web apps. Worked on Appium with Javascript. 
+									Hybrid framework using java for web apps. 
+									 Worked on Appium with Javascript. 
 
 									 
 								</p>
