--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 							<header>
 								<h1>Hi, I'm <strong>Nishad Taj</strong>.</h1>
 							</header>
-							<p>Test Automation Engineer | 4+ years of experience 
-								| Proficient in Agile methodologies | Contact: nishadtaj84@gmail.com								
+							<p>Test Automation Engineer | 4+ years of experience | Proficient in Agile methodologies | Contact: nishadtaj84@gmail.com							
 							</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
@@ -50,7 +49,7 @@
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
 								<h3>Quality Analyst (QA)</h3>
-								<p>I specialize in QA, with key skills in functional testing (including regression, smoke, sanity, and integration), non-functional testing (API testing using Postman), test planning, and bug reporting, including root cause analysis (RCA).
+								<p>I specialize in QA, focusing on functional testing (including regression, smoke, sanity, and integration) and non-functional testing (API testing with Postman). My expertise extends to test planning, bug reporting, and root cause analysis (RCA). Additionally, I have experience in performance testing using Xcode and Android Studio for mobile applications.
 								</p>
 							</section>
 						</div>
