--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
 								<h3>Quality Analyst (QA)</h3>
-								<p>I specialize in QA, focusing on functional testing (including regression, smoke, sanity, and integration) and non-functional testing (API testing with Postman). My expertise extends to test planning, bug reporting, and root cause analysis (RCA).
+								<p>I specialize in QA, focusing on functional testing (including regression, smoke, sanity, and integration) and non-functional testing (API testing with Postman). My expertise extends to test planning and root cause analysis(RCA).
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
