--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>QA Automation</h3>
-								<p>I focus on functional automation with Selenium in Java and API automation with Rest Assured. 
-									       I have also developed a hybrid framework for web applications using Java and have practical experience with Appium in JavaScript.	 
+								<p>I focus on functional automation with Selenium in Java and API automation with Rest Assured. I have also developed a hybrid framework for web applications using Java and have practical experience with Appium in JavaScript.	 
 								</p>
 							</section>
 						</div>
