--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<p>Quality Analyst (QA) - QA Automation - Performance Testing</p>
 					</header>
 					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-medium">
+						<div class="col-4 col-6-large col-12-medium">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
 								<h3>Quality Analyst (QA)</h3>
@@ -53,7 +53,7 @@
 									My expertise extends to test planning and root cause analysis(RCA).
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-medium">
+						<div class="col-4 col-6-large col-12-medium">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>QA Automation</h3>
@@ -62,7 +62,7 @@
 								</p>
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-medium">
+						<div class="col-4 col-6-large col-12-medium">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
 								<h3>Agile Principles</h3>
@@ -87,7 +87,7 @@
 					
 					</header>
 					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-medium">
+						<div class="col-4 col-6-large col-12-medium">
 							<article class="box style2">
 								<a href="https://github.com/Nishadtaj" class="image featured"><img src="images/logo_github.png" alt="" /></a>
 								<h3><a href="https://github.com/Nishadtaj">Github</a></h3>
