--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
 								<h3>Agile Principles</h3>
-								<p>I have a strong understanding of Agile Scrum methodologies, actively participating in daily stand-ups, review sessions, retrospectives, sprint planning, and backlog refinement.
-									I prioritize clarity in acceptance criteria and effectively manage bug reports.
+								<p>I have a strong understanding of Agile Scrum methodologies, actively participating in daily stand-ups, review sessions, retrospectives, sprint planning, and backlog refinement. I prioritize clarity in acceptance criteria and effectively manage bug reports.
 								</p>
 							</section>
 						</div>
