--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<p>Quality Analyst (QA) - QA Automation - Performance Testing</p>
 					</header>
 					<div class="row aln-center">
-						<div class="col-4 col-6-large col-12-medium">
+						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
 								<h3>Quality Analyst (QA)</h3>
@@ -53,7 +53,7 @@
 									My expertise extends to test planning and root cause analysis(RCA).
 							</section>
 						</div>
-						<div class="col-4 col-6-large col-12-medium">
+						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>QA Automation</h3>
@@ -62,11 +62,11 @@
 								</p>
 							</section>
 						</div>
-						<div class="col-4 col-6-large col-12-medium">
+						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
 								<h3>Agile Principles</h3>
-								<p>I have a strong understanding of Agile Scrum methodologies, actively participating in daily stand-ups, review sessions, retrospectives, sprint planning, and backlog refinement. I prioritize clarity in acceptance criteria and effectively manage bug reports.
+								<p>I have a strong grasp of Agile Scrum methodologies and actively engage in daily stand-ups, reviews, retrospectives, sprint planning, and backlog refinement. I emphasize clear acceptance criteria and effectively handle bug reports.
 								</p>
 							</section>
 						</div>
@@ -86,7 +86,7 @@
 					
 					</header>
 					<div class="row aln-center">
-						<div class="col-4 col-6-large col-12-medium">
+						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://github.com/Nishadtaj" class="image featured"><img src="images/logo_github.png" alt="" /></a>
 								<h3><a href="https://github.com/Nishadtaj">Github</a></h3>
