--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					
 					</header>
 					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-4 col-6-large col-12-small">
 							<article class="box style2">
 								<a href="https://github.com/Nishadtaj" class="image featured"><img src="images/logo_github.png" alt="" /></a>
 								<h3><a href="https://github.com/Nishadtaj">Github</a></h3>
