--- a/index.html
+++ b/index.html
@@ -49,16 +49,14 @@
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
 								<h3>Quality Analyst (QA)</h3>
-								<p>I specialize in QA, focusing on functional testing (including regression, smoke, sanity, and integration) and non-functional testing (API testing with Postman).
-									My expertise extends to test planning and root cause analysis(RCA).
+								<p>I specialize in QA, focusing on functional testing (including regression, smoke, sanity, and integration) and non-functional testing (API testing with Postman). My expertise extends to test planning and root cause analysis(RCA).
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>QA Automation</h3>
-								<p>I focus on functional automation with Selenium in Java and API automation with Rest Assured.
-									I have also developed a hybrid framework for web applications using Java and have practical experience with Appium in JavaScript.	 
+								<p>I focus on functional automation with Selenium in Java and API automation with Rest Assured. I have also developed a hybrid framework for web applications using Java and have practical experience with Appium.	 
 								</p>
 							</section>
 						</div>
