--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
 								<h3>Agile Principles</h3>
-								<p>I possess a strong understanding of Agile Scrum methodologies and regularly participate in daily stand-ups, reviews, retrospectives, sprint planning, and backlog refinement. Additionally, I efficiently manage bug reports.
+								<p>I possess a strong understanding of Agile Scrum methodologies and regularly participate in daily stand-ups, reviews, retrospectives, sprint planning, and backlog refinement. Additionally, I effectively manage bug reporting and tracking.
 								</p>
 							</section>
 						</div>
