--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>QA Automation</h3>
-								<p>I specialize in functional automation with Selenium in Java and API automation using Rest Assured. I have also created a hybrid framework for web applications with Selenium and have hands-on experience with Appium for mobile applications.
+								<p>I focus on functional automation with Selenium in Java and API automation using Rest Assured. I have also created a hybrid framework for web applications with Selenium and have hands-on experience with Appium for mobile applications.
 								</p>
 							</section>
 						</div>
